--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,98 +1,136 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+@font-face {
+  font-family: 'Pretendard';
+  font-weight: 900;
+  font-display: swap;
+  src: local('Pretendard Black'),
+    url('./woff2/Pretendard-Black.woff2') format('woff2'),
+    url('./woff/Pretendard-Black.woff') format('woff');
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
+@font-face {
+  font-family: 'Pretendard';
+  font-weight: 800;
+  font-display: swap;
+  src: local('Pretendard ExtraBold'),
+    url('./woff2/Pretendard-ExtraBold.woff2') format('woff2'),
+    url('./woff/Pretendard-ExtraBold.woff') format('woff');
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+@font-face {
+  font-family: 'Pretendard';
+  font-weight: 700;
+  font-display: swap;
+  src: local('Pretendard Bold'),
+    url('./woff2/Pretendard-Bold.woff2') format('woff2'),
+    url('./woff/Pretendard-Bold.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'Pretendard';
+  font-weight: 600;
+  font-display: swap;
+  src: local('Pretendard SemiBold'),
+    url('./woff2/Pretendard-SemiBold.woff2') format('woff2'),
+    url('./woff/Pretendard-SemiBold.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'Pretendard';
+  font-weight: 500;
+  font-display: swap;
+  src: local('Pretendard Medium'),
+    url('./woff2/Pretendard-Medium.woff2') format('woff2'),
+    url('./woff/Pretendard-Medium.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'Pretendard';
+  font-weight: 400;
+  font-display: swap;
+  src: local('Pretendard Regular'),
+    url('./woff2/Pretendard-Regular.woff2') format('woff2'),
+    url('./woff/Pretendard-Regular.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'Pretendard';
+  font-weight: 300;
+  font-display: swap;
+  src: local('Pretendard Light'),
+    url('./woff2/Pretendard-Light.woff2') format('woff2'),
+    url('./woff/Pretendard-Light.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'Pretendard';
+  font-weight: 200;
+  font-display: swap;
+  src: local('Pretendard ExtraLight'),
+    url('./woff2/Pretendard-ExtraLight.woff2') format('woff2'),
+    url('./woff/Pretendard-ExtraLight.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'Pretendard';
+  font-weight: 100;
+  font-display: swap;
+  src: local('Pretendard Thin'),
+    url('./woff2/Pretendard-Thin.woff2') format('woff2'),
+    url('./woff/Pretendard-Thin.woff') format('woff');
+}
+
+/* styles */
+body,
+body[data-theme='dark'] {
+  --bg-main: #111111;
+  --bg-sub: #333333;
+  --bg-a5: rgba(0, 0, 0, 0.5);
+  --bg-a7: rgba(0, 0, 0, 0.7);
+  --tx-main: #eaeaea;
+  --tx-sub: #bdc1c9;
+  --tx-sub-dark: #a6a5a4;
+  --tx-accent: #6667ab;
+  --tx-accent-light: #b2b3d5;
+  --tx-wb: #ffffff;
+}
+
+body[data-theme='light'] {
+  --bg-main: #ffffff;
+  --bg-sub: #f4f4f4;
+  --bg-a5: rgba(255, 255, 255, 0.5);
+  --bg-a7: rgba(255, 255, 255, 0.7);
+  --tx-main: #111111;
+  --tx-sub: #555555;
+  --tx-sub-dark: #333333;
+  --tx-accent: #159eee;
+  --tx-accent-light: #99cfe5;
+  --tx-wb: #000000;
+}
+
+body {
+  --tx-white: #eaeaea;
+}
+
+body,
+header {
+  transition: background 0.9s ease-in-out;
+}
+
+body[data-theme='dark'] #home-profile {
+  background: url('') no-repeat center, var(--bg-main);
+}
+
+body[data-theme='light'] #home-profile {
+  background: url('') no-repeat, var(--bg-main);
+  background-size: cover;
 }
 
 html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  padding: 0;
+  margin: 0;
+  background: var(--bg-main);
+  min-width: 320px;
 }
 
 a {
@@ -100,8 +138,238 @@ a {
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+* {
+  box-sizing: border-box;
+  font-family: 'Pretendard', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  color: var(--tx-main);
+}
+
+@keyframes rainbow {
+  0% {
+    background-position: left;
   }
+  50% {
+    background-position: right;
+  }
+  100% {
+    background-position: left;
+  }
+}
+
+pre[class*='language-'] > .code-highlight {
+  padding: 0;
+  border: none;
+  font-size: 14px;
+}
+
+code[class*='language-'],
+pre[class*='language-'] {
+  color: #ebdbb2; /* fg1 / fg */
+  direction: ltr;
+  text-align: left;
+  white-space: pre;
+  word-spacing: normal;
+  word-break: normal;
+  line-height: 1.5;
+
+  -moz-tab-size: 4;
+  -o-tab-size: 4;
+  tab-size: 4;
+
+  -webkit-hyphens: none;
+  -moz-hyphens: none;
+  -ms-hyphens: none;
+  hyphens: none;
+}
+
+pre[class*='language-']::-moz-selection,
+pre[class*='language-'] ::-moz-selection,
+code[class*='language-']::-moz-selection,
+code[class*='language-'] ::-moz-selection {
+  color: #fbf1c7; /* fg0 */
+  background: #7c6f64; /* bg4 */
+}
+
+pre[class*='language-']::selection,
+pre[class*='language-'] ::selection,
+code[class*='language-']::selection,
+code[class*='language-'] ::selection {
+  color: #fbf1c7; /* fg0 */
+  background: #7c6f64; /* bg4 */
+}
+
+/* Code blocks */
+pre[class*='language-'] {
+  padding: 1em;
+  margin: 8px 0;
+  overflow: auto;
+  font-size: 14px;
+}
+
+:not(pre) > code[class*='language-'],
+pre[class*='language-'] {
+  border: 1px solid var(--tx-accent-light);
+  border-radius: 7px;
+}
+
+/* Inline code */
+:not(pre) > code[class*='language-'] {
+  padding: 0.1em;
+  border-radius: 0.3em;
+  font-size: 14px;
+}
+
+.token {
+  font-size: 14px;
+}
+
+.token.comment,
+.token.prolog,
+.token.cdata {
+  color: #808b97;
+}
+
+.token.delimiter,
+.token.boolean,
+.token.keyword,
+.token.selector,
+.token.important,
+.token.atrule {
+  color: #ff7b79;
+}
+
+.token.operator,
+.token.punctuation,
+.token.attr-name {
+  color: #a89984; /* fg4 / gray1 */
+}
+
+.token.tag,
+.token.tag .punctuation,
+.token.doctype,
+.token.builtin {
+  color: #15a5cf;
+}
+
+.token.entity,
+.token.number,
+.token.symbol {
+  color: #59c0ff;
+}
+
+.token.property,
+.token.constant,
+.token.variable {
+  color: var(--tx-wb);
+}
+
+.token.string,
+.token.char {
+  color: #ffa657;
+}
+
+.token.attr-value,
+.token.attr-value .punctuation {
+  color: #a89984;
+}
+
+.token.url {
+  color: #c0edf6;
+  text-decoration: underline;
+}
+
+.token.function {
+  color: var(--tx-wb);
+}
+
+.token.regex {
+  background: var(--tx-wb);
+}
+
+.token.bold {
+  font-weight: bold;
+}
+
+.token.italic {
+  font-style: italic;
+}
+
+.token.inserted {
+  background: #a89984; /* fg4 / gray1 */
+}
+
+.token.deleted {
+  background: #bb8395; /* red2 */
+}
+
+.code-line {
+  padding-top: 2px;
+  padding-bottom: 2px;
+  font-size: 14px;
+}
+
+.rehype-code-title {
+  background: var(--bg-sub);
+  border-top-left-radius: 7px;
+  border-top-right-radius: 7px;
+  border: 1px solid var(--tx-accent-light);
+  padding: 5px 16px;
+  font-weight: 700;
+  margin-top: 8px;
+  font-size: 14px;
+}
+
+.rehype-code-title + pre {
+  margin-top: 0;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+  border-top: 0;
+}
+
+pre {
+  overflow-x: auto;
+}
+
+.code-highlight {
+  float: left; /* 1 */
+  min-width: 100%; /* 2 */
+}
+
+.code-line {
+  display: block;
+  padding-left: 16px;
+  padding-right: 16px;
+  margin-left: -16px;
+  margin-right: -16px;
+  border-left-width: 4px;
+  font-size: 14px;
+}
+
+.code-line.inserted {
+  background-color: rgba(16, 185, 129, 0.2); /* Set inserted line (+) color */
+}
+
+.code-line.deleted {
+  background-color: rgba(239, 68, 68, 0.2); /* Set deleted line (-) color */
+}
+
+.highlight-line {
+  margin-left: -16px;
+  margin-right: -16px;
+  background-color: rgba(55, 65, 81, 0.5); /* Set highlight bg color */
+  border-left-width: 4px;
+  font-size: 14px;
+}
+
+.line-number::before {
+  display: inline-block;
+  width: 1rem;
+  text-align: right;
+  margin-right: 16px;
+  margin-left: -8px;
+  color: rgb(156, 163, 175); /* Line number color */
+  content: attr(line);
 }
